testdata/golden/sema/valid/module_multifile_internal/beta.fmt
pragma module;

fn beta(y: int) -> int {
    return alpha(y) + 1;
}
