testdata/golden/sema/invalid/module_hidden_cross_file/second.fmt
pragma module;

fn use_secret() -> int {
    return secret();
}
